// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`can transform record with eligible and ineligible criteria 1`] = `
{
  "caseNotes": {
    "ba bar": [
      {
        "eventDate": 2022-09-06T00:00:00.000Z,
        "noteBody": "Body3",
        "noteTitle": "Title3",
      },
    ],
    "foo": [
      {
        "eventDate": 2022-04-06T00:00:00.000Z,
        "noteBody": "Body1",
        "noteTitle": "Title1",
      },
      {
        "eventDate": 2022-06-06T00:00:00.000Z,
        "noteBody": "Body2",
        "noteTitle": "Title2",
      },
    ],
  },
  "eligibleCriteria": {
    "negativeDaWithin90Days": {
      "latestUaDates": [
        2022-01-03T00:00:00.000Z,
      ],
      "latestUaResults": [
        false,
      ],
    },
    "noFelonyWithin24Months": true,
    "onSupervisionAtLeastOneYear": {
      "eligibleDate": 2022-05-28T00:00:00.000Z,
    },
    "supervisionNotPastFullTermCompletionDate": {
      "eligibleDate": "2025-06-19",
    },
    "usIdIncomeVerifiedWithin3Months": {
      "incomeVerifiedDate": 2024-06-03T00:00:00.000Z,
    },
    "usIdLsirLevelLowFor90Days": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "LOW",
    },
    "usIdNoActiveNco": {
      "activeNco": true,
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": {},
  "ineligibleCriteria": {
    "usIdIncomeVerifiedWithin3Months": true,
  },
  "isAlmostEligible": true,
  "isEligible": false,
  "stateCode": "US_ID",
}
`;

exports[`optional criteria have sane fallbacks 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "negativeDaWithin90Days": {
      "latestUaDates": [],
      "latestUaResults": [],
    },
    "noFelonyWithin24Months": true,
    "onSupervisionAtLeastOneYear": {
      "eligibleDate": 2022-05-28T00:00:00.000Z,
    },
    "supervisionNotPastFullTermCompletionDate": {
      "eligibleDate": "2025-06-19",
    },
    "usIdIncomeVerifiedWithin3Months": {
      "incomeVerifiedDate": 2022-06-03T00:00:00.000Z,
    },
    "usIdLsirLevelLowFor90Days": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "LOW",
    },
    "usIdNoActiveNco": {
      "activeNco": false,
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": {},
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "stateCode": "US_ID",
}
`;

exports[`transform record 1`] = `
{
  "caseNotes": {
    "ba bar": [
      {
        "eventDate": 2022-09-06T00:00:00.000Z,
        "noteBody": "Body3",
        "noteTitle": "Title3",
      },
    ],
    "foo": [
      {
        "eventDate": 2022-04-06T00:00:00.000Z,
        "noteBody": "Body1",
        "noteTitle": "Title1",
      },
      {
        "eventDate": 2022-06-06T00:00:00.000Z,
        "noteBody": "Body2",
        "noteTitle": "Title2",
      },
    ],
  },
  "eligibleCriteria": {
    "negativeDaWithin90Days": {
      "latestUaDates": [
        2022-01-03T00:00:00.000Z,
      ],
      "latestUaResults": [
        false,
      ],
    },
    "noFelonyWithin24Months": true,
    "onSupervisionAtLeastOneYear": {
      "eligibleDate": 2022-05-28T00:00:00.000Z,
    },
    "supervisionNotPastFullTermCompletionDate": {
      "eligibleDate": "2025-06-19",
    },
    "usIdIncomeVerifiedWithin3Months": {
      "incomeVerifiedDate": 2022-06-03T00:00:00.000Z,
    },
    "usIdLsirLevelLowFor90Days": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "LOW",
    },
    "usIdNoActiveNco": {
      "activeNco": true,
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": {
    "employerName": "Betty Rubble",
  },
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "stateCode": "US_ID",
}
`;
